pages/index.css
@import url(../vendor/fonts/fonts.css);

@-webkit-keyframes rotation {
  from {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes rotation {
  from {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.rotation {
  -webkit-animation: rotation 5s linear infinite;
  animation: rotation 5s linear infinite;
}

/* automatic/manual light mode */
:root,
:root.light {
  --color-text: #000;
  --color-bg: #fff;
  --color-bg-header: rgba(255, 255, 255, 0.9);
  --color-box-shadow: rgba(0, 0, 0, 0.05);
  --button-like: url("../images/like-button.svg");
  --color-footer-bg: #fafafa;
  --color-footer-text: #231f20;
}

/* automatic dark mode */
/* ❗️ keep the rules in sync with the manual dark mode below! */
@media (prefers-color-scheme: dark) {
  :root {
    --color-text: #fff;
    --color-bg: #000;
    --color-bg-header: rgba(0, 0, 0, 0.9);
    --color-box-shadow: rgba(255, 255, 255, 0.05);
    --button-like: url("../images/like-button_white.svg");
    --color-footer-bg: #231f20;
    --color-footer-text: #fafafa;
  }
}

/* manual dark mode 
/* ❗️ keep the rules in sync with the automatic dark mode above! */
:root.dark {
  --color-text: #fff;
  --color-bg: #000;
  --color-bg-header: rgba(0, 0, 0, 0.9);
  --color-box-shadow: rgba(255, 255, 255, 0.05);
  --button-like: url("../images/like-button_white.svg");
  --color-footer-bg: #231f20;
  --color-footer-text: #fafafa;
}

.page {
  min-width: 282px;
  max-width: 768px;
  min-height: 100vh;
  background: var(--color-bg);
  margin: 0 auto;
  font-family: "Gilroy", Arial, sans-serif;
  color: var(--color-text);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
}
@media screen and (prefers-color-scheme: dark) {
  .page {
    background: var(--color-bg);
    color: var(--color-text);
  }
}

.loader {
  margin: 0 auto;
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: var(--color-bg);
  z-index: 2;
  opacity: 0.9;
}
@media screen and (prefers-color-scheme: dark) {
  .loader {
    background-color: var(--color-bg);
  }
}
.loader__pic {
  margin: 50px auto;
  height: 75px;
  width: 75px;
  background: #f7941e;
  z-index: 2;
}
.loader__text {
  font-size: 32px;
  line-height: 42px;
}

.link {
  margin: 0;
  text-decoration: none;
}
.list {
  display: block;
  margin: 0;
  padding: 0;
  list-style: none;
}
.button {
  display: block;
  margin: 30px auto 0;
  width: 200px;
  height: 50px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  border: none;
  border-radius: 5px;
  text-transform: uppercase;
  color: #f7941e;
  background: rgba(247, 148, 30, 0.3);
  touch-action: manipulation;
}
.button_place_prev {
  margin: 0;
  width: 75px;
}
.button_place_next {
  margin: 0;
  width: 75px;
}
.button_place_blogs {
  margin: 40px auto 0;
}
.hidden {
  display: none;
}

.header {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translate(-50%, 0);
  width: 100%;
  max-width: 768px;
  padding: 10px 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  background-color: var(--color-bg-header);
  z-index: 2;
}
@media screen and (prefers-color-scheme: dark) {
  .header {
    background-color: var(--color-bg-header);
  }
}
.header__menu {
  display: block;
  width: 30px;
  height: 30px;
  background-color: #000;
  background-image: url("../images/header-mobile__button.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  touch-action: manipulation;
}
.header__logo {
  display: block;
  width: 30px;
  height: 30px;
  touch-action: manipulation;
}
.header__button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 30px;
  box-sizing: border-box;
  color: #f7941e;
  font-size: 12px;
  line-height: 16px;
  border: 1px solid #f7941e;
  border-radius: 5px;
  text-transform: uppercase;
  touch-action: manipulation;
}

.mySwiper {
  width: 100%;
  box-sizing: border-box;
  height: calc(100vh - 50px);
  background-image: url("../images/lead__image-1.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}
.lead {
  width: 100%;
  padding: 50px 0 0;
  box-sizing: border-box;
}
.lead__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background: linear-gradient(180deg, rgba(0, 0, 0, 0.01) 0%, rgba(0, 0, 0, 0.75) 82.82%);
}
.lead__info {
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 20px 50px 25vh;
  color: #fff;
}
.lead__title {
  margin: 0 0 10px;
  font-size: 32px;
  line-height: 42px;
}
.lead__text {
  margin: 0 0 20px;
  font-size: 20px;
  line-height: 24px;
}
.lead__link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 30px;
  box-sizing: border-box;
  color: #fff;
  background-color: #f7941e;
  font-size: 12px;
  line-height: 16px;
  border: 1px solid #f7941e;
  border-radius: 5px;
  text-transform: uppercase;
  touch-action: manipulation;
}

.gifts {
  width: 100%;
  padding: 60px 10px;
  box-sizing: border-box;
}
.gifts__title {
  margin: 0 0 20px;
  font-size: 32px;
  line-height: 42px;
  text-align: center;
}
.gifts__subtitle {
  margin: 0 0 40px;
  font-size: 20px;
  line-height: 24px;
  text-align: center;
}
.gifts__cards {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 30px;
}
.gifts__card {
  display: none;
  max-width: 270px;
  height: 436px;
  box-shadow: 10px 10px 15px var(--color-box-shadow);
}
/* ... */

